--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,9 @@
+<!--
+ * @Date                : 2021-11-17 21:44:43
+ * @LastEditors         : 王少帅
+ * @LastEditTime        : 2021-11-17 21:44:43
+ * @FilePath            : /my_blog/templates/base.html
+-->
 {% load static %}
 <html lang="zh-cn">
 
@@ -20,7 +26,8 @@
     {% include 'footer.html' %}
     <!-- bootstrap.js 依赖 jquery.js 和popper.js，因此在这里引入 -->
     <script src="{% static 'jquery/jquery.js' %}"></script>
-
+    <!-- 新增代码 -->
+    {% block script %}{% endblock script %}
     <!-- 
         popper.js 采用 cdn 远程引入，意思是你不需要把它下载到本地。
         在实际的开发中推荐静态文件尽量都使用 cdn 的形式。 
