--- a/templates/article/update.html
+++ b/templates/article/update.html
@@ -1,3 +1,9 @@
+<!--
+ * @Date                : 2021-11-16 21:42:11
+ * @LastEditors         : 王少帅
+ * @LastEditTime        : 2021-11-16 21:42:11
+ * @FilePath            : /my_blog/templates/article/update.html
+-->
 {% extends "base.html" %}
 {% load static%}
 
@@ -16,6 +22,25 @@
                     <label for="title">文章标题</label>
                     <!-- 在 value 属性中指定文本框的初始值为旧的内容，即 article 对象中的 title 字段 -->
                     <input type="text" class="form-control" id="title" name="title" value="{{ article.title }}">
+                </div>
+                <!-- 文章栏目 -->
+                <div class="form-group">
+                    <label for="column">栏目</label>
+                    <select class="form-control" 
+                            id="column" 
+                            name="column"
+                    >
+                            <option value="none">请选择栏目..</option>
+                        {% for column in columns %}
+                            <option value="{{ column.id }}"
+                                {% if column.id == article.column.id %}
+                                    selected
+                                {% endif %}
+                            >
+                                {{ column }}
+                            </option>
+                        {% endfor %}
+                    </select>
                 </div>
                 <div class="form-group">
                     <label for="body">文章正文</label>
